spacing fixes

--- a/style/style.css
+++ b/style/style.css
@@ -182,7 +182,6 @@ a {
 }
 
 .area {
-    margin-top: 50px;
     display: flex;
     gap: 10px;
 }
